src/objects/Learning_Path__c.object
<CustomObject>
    <description>PRM-LMS Learning Path - a custom object to store LMS user progress on registered learning paths</description>
    <fields>
        <fullName>Completion_Bracket__c</fullName>
        <description>PEP-ACN-PRM-81-Completion Bracket</description>
        <formula>IF(Progress__c =0 , &apos;Not Started&apos;,  
    IF(AND(Progress__c  &gt;= 1,Progress__c  &lt;= 25), &apos;0% - 25%&apos;, 
         IF(AND(Progress__c  &gt;= 26,Progress__c  &lt;= 50), &apos;26% - 50%&apos;,  
            IF(AND(Progress__c  &gt;= 51,Progress__c  &lt;= 75), &apos;51% - 75%&apos;,  
                IF(AND(Progress__c  &gt;= 76,Progress__c  &lt;= 99), &apos;76% - 99%&apos;,  
                    IF(Progress__c =100, &apos;Complete&apos;, &apos;&apos;) ) ) ) ) )</formula>
        <label>Completion Bracket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_learning_path_URL__c</fullName>
        <description>PRM-LMS Reporting- this field contains the URL to access the learning path in LMS</description>
        <label>LMS learning path URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Learning_Path_Enrollment_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PRM-LMS Reporting - This field contains the ID of learning Path in LMS</description>
        <externalId>true</externalId>
        <label>Learning Path Enrollment ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Learning_Path_Label__c</fullName>
        <description>PRM-LMS Reporting - This field contains the Label of learning Path</description>
        <label>Learning Path Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRM-LMS Reporting-this field contains Salesforce Product ID</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Learning Paths</relationshipLabel>
        <relationshipName>Learning_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress (percentage)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRM-LMS Reporting - This field contains Salesforce User ID of PRM user</description>
        <label>Salesforce User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Path</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Learning Path Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Paths</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>